fix: fixed nav link color unchanging bug

--- a/static/css/components/navbar.css
+++ b/static/css/components/navbar.css
@@ -1,11 +1,19 @@
 /* Navbar Padrão */
-.navbar {
+#navbar {
     transition: all 0.3s ease;
     z-index: 999;
 }
 
 /* Navbar ao rolar a página */
-.navbar.scrolled {
+#navbar.scrolled {
     background-color: #FFF7DC;
     backdrop-filter: blur(5px);
+}
+
+#navbar.scrolled .nav-link {
+    color: #000 !important;
+}
+
+#navbar.scrolled .nav-link:hover {
+    color: #555 !important;
 }
