--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -17,16 +17,16 @@
                 <li class="nav-item">
                     <a href="{% url 'home' %}" class="nav-link">Início</a>
                 </li>
-                <li>
+                <li class="nav-item">
                     <a href="#" class="nav-link">Sobre</a>
                 </li>
-                <li>
+                <li class="nav-item">
                     <a href="#" class="nav-link">Evento</a>
                 </li>
-                <li>
+                <li class="nav-item">
                     <a href="#" class="nav-link">Presença</a>
                 </li>
-                <li>
+                <li class="nav-item">
                     <a href="#" class="nav-link">Galeria</a>
                 </li>
             </ul>
